--- a/two_panel_bar_charts.Rmd
+++ b/two_panel_bar_charts.Rmd
@@ -11,8 +11,9 @@ library(ggpubr)
 
 knitr::opts_chunk$set(
   fig.width = 7,
-  fig.asp = .6,
-  out.width = "90%"
+  fig.asp = .8,
+  out.width = "110%",
+  dpi = 600
 )
 
 theme_set(theme_minimal())
